tests/unit/language/errors/undefined_archetype.arche
static UndefinedArch(10);
// RUN: %arche -o %t %s > %t.out 2>&1 ; grep -q "unknown archetype" %t.out


@allow_pure_proc
proc main() {
}
